set personal token

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-user_token: вставьте_ваш_токен_вместо_этой_строки
+user_token: YTkyMmNiNTktN2ZjNS00ZTRmLWI2MTMtOGRhOGNiMTU4ODVkXzEyNjM=
 
 session:
   key: key_to_generate
