--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 user_token: YTkyMmNiNTktN2ZjNS00ZTRmLWI2MTMtOGRhOGNiMTU4ODVkXzEyNjM=
 
 session:
-  key: key_to_generate
+  key: m5hidm8ukhfpydkokdf25hyz652jlmci
 admin:
   email: admin@admin.com
   password: admin
