--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,34 @@
-aiohttp>=3.7.4.post0
-aiohttp-apispec==2.2.1
-pyyaml==5.4.1
-marshmallow~=3.13.0
-aiohttp-apispec==2.2.1
-aiohttp-session==2.9.0
-cryptography==3.4.7
-pytest==6.2.4
+aiohttp==3.9.1
+aiohttp-apispec==2.2.3
+aiohttp-session==2.12.0
+aiosignal==1.3.1
+apispec==3.3.2
+async-timeout==4.0.3
+attrs==23.1.0
+bcrypt==4.1.2
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+cryptography==41.0.7
+exceptiongroup==1.2.0
+frozenlist==1.4.1
+idna==3.6
+iniconfig==2.0.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+multidict==6.0.4
+packaging==23.2
+pluggy==1.3.0
+pycparser==2.21
+pyparsing==3.1.1
+pytest==7.4.0
 pytest-aiohttp==0.3.0
-markupsafe==2.0.1
+PyYAML==6.0.1
+setuptools==69.0.3
+six==1.16.0
+toml==0.10.2
+tomli==2.0.1
+typing_extensions==4.9.0
+webargs==5.5.3
+yarl==1.9.4
