--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,10 +113,6 @@ extend-ignore = [
     "PLC2701",  #  import-private-name                          (https://docs.astral.sh/ruff/rules/import-private-name)
     "PLR0913",  #  too-many-arguments                           (https://docs.astral.sh/ruff/rules/too-many-arguments)
     "PLR1714",  #  repeated-equality-comparison                 (https://docs.astral.sh/ruff/rules/repeated-equality-comparison)
-    "PT004",    #  pytest-missing-fixture-name-underscore       (https://docs.astral.sh/ruff/rules/pytest-missing-fixture-name-underscore)
-    "PT005",    #  pytest-incorrect-fixture-name-underscore     (https://docs.astral.sh/ruff/rules/pytest-incorrect-fixture-name-underscore)
-    "PT007",    #  pytest-parametrize-values-wrong-type         (https://docs.astral.sh/ruff/rules/pytest-parametrize-values-wrong-type)
-    "PT012",    #  pytest-raises-with-multiple-statements       (https://docs.astral.sh/ruff/rules/pytest-raises-with-multiple-statements)
     "RUF001",   #  ambiguous-unicode-character-string           (https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-string)
     "RUF002",   #  ambiguous-unicode-character-docstring        (https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-docstring)
     "RUF003",   #  ambiguous-unicode-character-comment          (https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-comment)
@@ -173,6 +169,7 @@ parametrize-names-type = "csv"
 parametrize-values-type = "tuple"
 
 [tool.pytest.ini_options]
+asyncio_mode="auto"
 filterwarnings = [
     "ignore::DeprecationWarning:asyncpg.*:",
     "ignore::DeprecationWarning:pytest_asyncio.plugin.*:",
